Update all classes with ModelMapper