@@ -7,60 +7,53 @@ import com.etiya.rentacar.business.dtos.responses.fuel.CreatedFuelResponse;
 import com.etiya.rentacar.business.dtos.responses.fuel.GetFuelListResponse;
 import com.etiya.rentacar.business.dtos.responses.fuel.GetFuelResponse;
 import com.etiya.rentacar.business.dtos.responses.fuel.UpdatedFuelResponse;
+import com.etiya.rentacar.core.utilities.mapping.ModelMapperService;
 import com.etiya.rentacar.dataAccess.abstracts.FuelRepository;
 import com.etiya.rentacar.entities.Fuel;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 @AllArgsConstructor
 @Service
 public class FuelManager implements FuelService {
     private FuelRepository fuelRepository;
+    private ModelMapperService modelMapperService;
     @Override
     public CreatedFuelResponse add(CreateFuelRequest createFuelRequest) {
-        Fuel fuel = new Fuel();
-        fuel.setName(createFuelRequest.getName());
+        Fuel fuel = this.modelMapperService.forRequest().map(createFuelRequest, Fuel.class);
         fuelRepository.save(fuel);
 
-        CreatedFuelResponse response = new CreatedFuelResponse();
-        response.setId(fuel.getId());
-        response.setName(fuel.getName());
-        response.setCreatedDate(fuel.getCreatedDate());
-
-        return response;
+        return this.modelMapperService.forResponse().map(fuel, CreatedFuelResponse.class);
 
 
     }
 
     @Override
     public UpdatedFuelResponse update(UpdateFuelRequest updateFuelRequest) {
-        Fuel fuel = fuelRepository.findById(updateFuelRequest.getId()).orElseThrow(() -> new IllegalArgumentException("Fuel not found"));
-        fuel.setName(updateFuelRequest.getName());
-        fuelRepository.save(fuel);
+        Fuel existingFuel = fuelRepository.findById(updateFuelRequest.getId()).orElseThrow(() -> new IllegalArgumentException("Fuel not found"));
 
-        UpdatedFuelResponse response = new UpdatedFuelResponse();
-        response.setId(fuel.getId());
-        response.setName(fuel.getName());
-        response.setUpdatedDate(fuel.getUpdatedDate());
+        modelMapperService.forRequest().map(updateFuelRequest, existingFuel);
+        Fuel updatedFuel = fuelRepository.save(existingFuel);
 
-        return response;
+        return this.modelMapperService.forResponse().map(updatedFuel, UpdatedFuelResponse.class);
     }
 
     @Override
     public GetFuelResponse getById(int id) {
         Fuel fuel = fuelRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Fuel not found"));
-        GetFuelResponse response = new GetFuelResponse();
-        response.setId(fuel.getId());
-        response.setName(fuel.getName());
-        return response;
+
+        return this.modelMapperService.forResponse().map(fuel, GetFuelResponse.class);
     }
 
     @Override
     public List<GetFuelListResponse> getAll() {
         List<Fuel> fuels = fuelRepository.findAll();
-        List<GetFuelListResponse> response = fuels.stream().map(fuel -> new GetFuelListResponse(fuel.getId(), fuel.getName())).toList();
-        return response;
+        return fuels.stream()
+                .map(fuel -> this.modelMapperService.forResponse()
+                        .map(fuel, GetFuelListResponse.class)).collect(Collectors.toList());
     }
 
 
