@@ -10,6 +10,7 @@ import com.etiya.rentacar.business.dtos.responses.model.CreatedModelResponse;
 import com.etiya.rentacar.business.dtos.responses.model.GetModelListResponse;
 import com.etiya.rentacar.business.dtos.responses.model.GetModelResponse;
 import com.etiya.rentacar.business.dtos.responses.model.UpdatedModelResponse;
+import com.etiya.rentacar.core.utilities.mapping.ModelMapperService;
 import com.etiya.rentacar.dataAccess.abstracts.BrandRepository;
 import com.etiya.rentacar.dataAccess.abstracts.FuelRepository;
 import com.etiya.rentacar.dataAccess.abstracts.ModelRepository;
@@ -22,75 +23,51 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
 public class ModelManager implements ModelService {
 
     private ModelRepository modelRepository;
+    private ModelMapperService modelMapperService;
 
 
     @Override
     public CreatedModelResponse add(CreateModelRequest createModelRequest) {
-        Model model = new Model();
-
-
-
-        model.setName(createModelRequest.getName());
-
+        Model model = this.modelMapperService.forRequest().map(createModelRequest, Model.class);
 
         modelRepository.save(model);
 
-        CreatedModelResponse response = new CreatedModelResponse();
-        response.setId(model.getId());
-        response.setName(model.getName());
-        response.setBrandId(model.getBrand().getId());
-        response.setFuelId(model.getFuel().getId());
-        response.setTransmissionId(model.getTransmission().getId());
-        response.setCreatedDate(model.getCreatedDate());
-
-        return response;
+        return this.modelMapperService.forResponse().map(model, CreatedModelResponse.class);
     }
 
     @Override
     public UpdatedModelResponse update(UpdateModelRequest updateModelRequest) {
-        Model model = modelRepository.findById(updateModelRequest.getId()).orElseThrow(() -> new IllegalArgumentException("Model not found"));
+        Model existingModel = modelRepository.findById(updateModelRequest.getId()).orElseThrow(() -> new IllegalArgumentException("Model not found"));
 
+        modelMapperService.forRequest().map(updateModelRequest, existingModel);
 
-        model.setName(updateModelRequest.getName());
+        Model updatedModel = modelRepository.save(existingModel);
 
-        modelRepository.save(model);
-
-
-        UpdatedModelResponse response = new UpdatedModelResponse();
-        response.setId(model.getId());
-        response.setName(model.getName());
-        response.setBrandId(model.getBrand().getId());
-        response.setFuelId(model.getFuel().getId());
-        response.setTransmissionId(model.getTransmission().getId());
-        response.setUpdatedDate(model.getUpdatedDate());
-        return response;
+        return this.modelMapperService.forResponse().map(updatedModel, UpdatedModelResponse.class);
     }
 
     @Override
     public GetModelResponse getById(int id) {
 
         Model model = modelRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Model not found"));
-        GetModelResponse response = new GetModelResponse();
-        response.setId(model.getId());
-        response.setName(model.getName());
-        response.setBrandId(model.getBrand().getId());
-        response.setFuelId(model.getFuel().getId());
-        response.setTransmissionId(model.getTransmission().getId());
-        return response;
+
+        return this.modelMapperService.forResponse().map(model, GetModelResponse.class);
     }
 
     @Override
     public List<GetModelListResponse> getAll() {
 
         List<Model> models = modelRepository.findAll();
-        List<GetModelListResponse> response = models.stream().map(model -> new GetModelListResponse(model.getId(), model.getName(), model.getBrand().getId(), model.getFuel().getId(), model.getTransmission().getId())).toList();
-        return response;
+        return models.stream()
+                .map(model -> this.modelMapperService.forResponse()
+                        .map(model, GetModelListResponse.class)).collect(Collectors.toList());
     }
 
 
